--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmFuncionesPelis.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmFuncionesPelis.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.5" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -48,10 +48,10 @@
                               </Group>
                               <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="txtGenero" alignment="0" min="-2" pref="78" max="-2" attributes="0"/>
-                                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+                                  <Component id="comboGenero" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="73" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                                   <Component id="comboClasificacion" min="-2" pref="94" max="-2" attributes="0"/>
@@ -151,8 +151,8 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="txtDuracion" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="txtGenero" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="comboClasificacion" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="comboGenero" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
@@ -408,11 +408,6 @@
         <Property name="text" type="java.lang.String" value="Genero"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtGenero">
-      <Properties>
-        <Property name="text" type="java.lang.String" value=" "/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JTextField" name="txtPaisOrigen">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -474,6 +469,25 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Pagina"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="comboGenero">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="8">
+            <StringItem index="0" value="Action"/>
+            <StringItem index="1" value="Adventure"/>
+            <StringItem index="2" value="Animation"/>
+            <StringItem index="3" value="Crime"/>
+            <StringItem index="4" value="Drama"/>
+            <StringItem index="5" value="Fantasy"/>
+            <StringItem index="6" value="Romance"/>
+            <StringItem index="7" value="Sci-Fi"/>
+          </StringArray>
+        </Property>
+      </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
